SubBt/force-app/main/default/objects/QuickBooks_Setting__mdt/QuickBooks_Setting__mdt.object-meta.xml
<CustomObject>
    <label>QuickBooks Setting</label>
    <pluralLabel>QuickBooks Settings</pluralLabel>
</CustomObject>