SubBt/force-app/main/default/objects/QuickBooks_Setting__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>