SubBt/force-app/main/default/objects/QuickBooks_Setting__mdt/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>